--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -15,6 +15,8 @@
           href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.css" />
     <link rel="stylesheet"
           href="css/app.css" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css"> 
 </head>
 
 <body>
@@ -24,6 +26,7 @@
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 
 </body>
 
